Fix overflow behavior for various panes in application panel.
Fixed: chromium:1523512

--- a/front_end/panels/application/interestGroupStorageView.css
+++ b/front_end/panels/application/interestGroupStorageView.css
@@ -14,8 +14,4 @@ devtools-interest-group-access-grid {
   font-size: 13px;
   color: var(--sys-color-token-subtle);
   overflow: auto;
-
-  & div {
-    width: 100%;
-  }
 }
