--- a/front_end/panels/application/reportingApiReportsView.css
+++ b/front_end/panels/application/reportingApiReportsView.css
@@ -10,8 +10,5 @@
   font-size: 13px;
   color: var(--sys-color-token-subtle);
   overflow: auto;
-
-  & div {
-    width: 100%;
-  }
+  text-align: center;
 }
