--- a/front_end/panels/application/sharedStorageEventsView.css
+++ b/front_end/panels/application/sharedStorageEventsView.css
@@ -14,8 +14,4 @@ devtools-shared-storage-access-grid {
   font-size: 13px;
   color: var(--sys-color-token-subtle);
   overflow: auto;
-
-  & div {
-    width: 100%;
-  }
 }
